filters fixed and aligned

--- a/css/cards.css
+++ b/css/cards.css
@@ -167,21 +167,14 @@
 }
 
 /*scroll bar on cards*/
-
-.card-info::-webkit-scrollbar{
+.card-info::-webkit-scrollbar, .hashtags-container::-webkit-scrollbar{
   height: 5px;
   width: 5px;
-  background-color: #aaa;
-}
-
-.hashtags-container::-webkit-scrollbar {
-  width: 5px;
-  height: 5px;
-  background-color: #aaa;
+  background-color: #1e1e24;
 }
 
 .card-info::-webkit-scrollbar-thumb, .hashtags-container::-webkit-scrollbar-thumb {
-  background:rgba(75, 69, 69, 0.684);
+  background:#6f6e6e;
 }
 
 /*==================*/
@@ -199,7 +192,7 @@
 }
 
 .card div.hashtags-container {
-  height: 2rem;
+  height: 2.15rem;
   overflow-y: auto;
   white-space: normal;
   margin: 0 0 0.3rem 0;
