--- a/css/general.css
+++ b/css/general.css
@@ -35,6 +35,18 @@ body {
   padding: 0;
 }
 
+body::-webkit-scrollbar {
+  width: 0.25rem;
+}
+
+body::-webkit-scrollbar-track {
+  background: #1e1e24;
+}
+
+body::-webkit-scrollbar-thumb {
+  background: #6f6e6e;
+}
+
 main {
   padding: 1rem;
   flex: 1;
