--- a/css/nav.css
+++ b/css/nav.css
@@ -1,16 +1,3 @@
-body::-webkit-scrollbar {
-  width: 0.25rem;
-}
-
-body::-webkit-scrollbar-track {
-  background: #1e1e24;
-}
-
-body::-webkit-scrollbar-thumb {
-  background: #6f6e6e;
-}
-
-
 .navbar {
   position: fixed;
   background-color: var(--bg-primary);
